[package]
name = "Solemn"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.44", features = ["derive"] }
colored = "3.0.0"
windows = { version = "=0.61.3", features = ["Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_Foundation",
    "Win32_System",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading"] }

winreg = "0.55.0"
